# advanced_analytics_engineering

./: .gitignore  _quarto.yml  about.qmd  dark.scss  index.qmd  light.scss  styles.css
docs/: about.html  index.html  listings.json  search.json  styles.css
docs/posts/embeddings_deepdive/: index.html
docs/posts/embeddings_deepdive 2/: index.html
docs/posts/glove_embeddings/: index.html
docs/posts/kedro-framework/: index.html
docs/posts/kedro-mlflow/: index.html
docs/posts/kedro-pymc-modelbuilder/: index.html  styles.css
docs/posts/kedro-ray/: index.html
docs/posts/rnn_elmo/: index.html
posts/bym-covid19-spatial/: environment.yml  index.qmd  state_populations_2024.parquet
posts/embeddings_deepdive/: index.qmd  references.bib
posts/glove_embeddings/: figure_template.py  index.qmd
posts/kedro-framework/: Dockerfile  index.qmd
posts/kedro-mlflow/: README.md  docker-compose.yml  environment.yml  index.qmd  requirements.txt
posts/kedro-pymc-modelbuilder/: environment.yml  index.qmd  pyproject.toml  requirements.txt
posts/kedro-pymc-modelbuilder/conf/base/: catalog.yml  parameters_ML.yml
posts/kedro-pymc-modelbuilder/src/kedro_framework/datasets/: pymc_forecast_dataset.py  pymc_model_dataset.py
posts/kedro-pymc-modelbuilder/src/kedro_framework/pipelines/ML/: nodes.py  pipeline.py
posts/kedro-pymc-modelbuilder/src/kedro_framework/pipelines/data_processing/: nodes.py
posts/kedro-ray/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  environment.yml  index.qmd  ray.Dockerfile
posts/llm_gpt_pretrain/: index.qmd  references.bib  styles.css
posts/rnn_elmo/: index.qmd  references.bib  styles.css
posts/skipgram_embeddings/: .vdoc.405101e1-e8b8-4c20-9bbf-52e5da54811c.py  .vdoc.a358f227-d349-441b-a433-518b7bae1d5e.py  .vdoc.ffefa9c3-e580-491c-b4ea-ac1b4fe90b07.py  index.qmd
posts/text-classification-tfidf/: index.qmd
posts/transformers_bert/: index.qmd  references.bib
posts/wordpiece_tokenizer/: environment.yml  index.qmd
(+60 files in other folders)
